@@ -1,5 +1,11 @@
 2008-08-31  Torsten Schoenfeld  <kaffeetisch@gmx.de>
 
+	* t/GtkTreeModelIface.t
+	* xs/GtkTreeModel.xs: Fix the stack handling in the xsub for
+	gtk_tree_model_get.  We need to call SPAGAIN before and PUTBACK
+	after code that modifies the local stack pointer (PUSHs and XPUSHs
+	for example).  Patch by Kevin Ryde.
+
 	* t/GtkWidget.t
 	* xs/GtkWidget.xs: Make Gtk2::Widget::hide_on_delete ignore excess
 	arguments so that it is actually usable.  Patch by Kevin Ryde.
